policies/curl-in-image.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: curl-in-image
spec:
  categories:
  - Security Best Practices
  criteriaLocked: true
  description: Alert on deployments with curl present
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on StackRox collector
    deployment:
      name: collector
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on StackRox central
    deployment:
      name: central
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on StackRox sensor
    deployment:
      name: sensor
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on StackRox admission controller
    deployment:
      name: admission-control
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - BUILD
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Curl in Image
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Image Component
      booleanOperator: OR
      negate: false
      values:
      - value: curl=
  rationale: Leaving download tools like curl in an image makes it easier for attackers
    to use compromised containers, since they can easily download software.
  remediation: Use your package manager's "remove", "purge" or "erase" command to
    remove curl from the image build for production containers. Ensure that any configuration
    files are also removed.
  scope: []
  severity: LOW_SEVERITY
  disabled: true
